[workspace]
members = [
    "client",
    "proxy",
    "util",
]
resolver = "2"


[workspace.dependencies]
tokio = "1"
tracing = "0.1"
serde = "1"
bincode = "1.3"
rsa = "0.9"
rand = "0.8"
ptls = { git = "https://github.com/metwse/ptls.git" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
style = "warn"
unused_self = "warn"
if_let_mutex = "warn"
