[package]
name = "client"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "Client for TCP port forwarding"
readme = "README.md"

[dependencies]
tokio = { workspace = true, features = ["net", "rt-multi-thread", "macros", "io-util", "io-std"] }
tracing = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
rsa = "0.9"
rand = "0.8"
ptls = { workspace = true }
util = { path = "../util/" }
lazy_static = "1.5"
dotenv = { workspace = true }

[dev-dependencies]
tracing-subscriber = "0.3"

[lints]
workspace = true
