[package]
name = "proxy"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "Proxy for TCP port forwarding"
readme = "README.md"

[dependencies]
tokio = { workspace = true, features = ["net", "test-util", "io-util", "macros", "rt-multi-thread", "sync"] }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
rsa = { workspace = true }
rand = { workspace = true }
dotenv = { workspace = true }
util = { path = "../util/" }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
ptls = { workspace = true }
lazy_static = "1.5"

[dev-dependencies]
tracing-subscriber = "0.3"

[lints]
workspace = true
