[package]
name = "util"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["io-util", "net", "macros", "rt", "sync", "time"] }
serde = { workspace = true, features = ["derive"] }
rsa = { workspace = true }
rand = { workspace = true }
paste = "1"
lazy_static = "1.5"

[lints]
workspace = true
